src/snapshots/rusty__configuration__tests__hardware_collected_gv.snap
---
source: src/configuration.rs
assertion_line: 235
expression: config

---
[
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "a",
                ),
            ],
        },
        direction: Input,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "b",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "2",
            "5",
        ],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "c",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "2",
            "5",
        ],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "d",
                ),
            ],
        },
        direction: Output,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "x",
                ),
            ],
        },
        direction: Output,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "y",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "1",
        ],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "z",
                ),
            ],
        },
        direction: Input,
        access_type: Word,
        address: [
            "1",
            "2",
        ],
    },
]
