src/snapshots/rusty__configuration__tests__hardware_collected_program.snap
---
source: src/configuration.rs
assertion_line: 256
expression: config

---
[
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "a",
                ),
            ],
        },
        direction: Input,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "b",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "2",
            "5",
        ],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "c",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "2",
            "5",
        ],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "d",
                ),
            ],
        },
        direction: Output,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "x",
                ),
            ],
        },
        direction: Output,
        access_type: Template,
        address: [],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "y",
                ),
            ],
        },
        direction: Output,
        access_type: Word,
        address: [
            "1",
        ],
    },
    HardwareBinding {
        qualifed_name: QualifiedName {
            names: [
                Name(
                    "prg",
                ),
                Name(
                    "z",
                ),
            ],
        },
        direction: Input,
        access_type: Word,
        address: [
            "1",
            "2",
        ],
    },
]
